# hudi-rs

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: release.yml
benchmark/tpch/: run.sh
cpp/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
cpp/cmake/: FindHudi.cmake
cpp/example/: CMakeLists.txt  example.cpp
cpp/include/: arrow_bridge.h  hudi.h
cpp/include/arrow/c/: abi.h
cpp/src/: bridge.rs  lib.rs  util.rs
crates/: AGENTS.md
crates/core/: Cargo.toml
crates/core/schemas/: HoodieDeleteRecordList.avsc  delete_record.avsc
crates/core/src/: error.rs  lib.rs
crates/core/src/avro_to_arrow/: README.md  arrow_array_reader.rs  avro_datum_reader.rs  mod.rs  reader.rs  schema.rs
crates/core/src/config/: mod.rs  plan.rs  read.rs  read_options.rs  table.rs
crates/core/src/file_group/: builder.rs  file_slice.rs  log_file.rs  reader.rs
crates/core/src/file_group/log_file/: avro.rs  content.rs  log_block.rs  log_format.rs  reader.rs  scanner.rs
crates/core/src/metadata/: commit.rs  merger.rs  table_record.rs
crates/core/src/metadata/table/: files.rs  mod.rs  records.rs  stats.rs
crates/core/src/schema/: mod.rs  resolver.rs
crates/core/src/statistics/: estimator.rs  mod.rs
crates/core/src/storage/: file_metadata.rs  mod.rs  util.rs
crates/core/src/table/: builder.rs  fs_view.rs  listing.rs  mod.rs  read_options.rs  validation.rs
crates/core/src/table/pruning/: partition_pruner.rs
crates/core/src/timeline/: mod.rs
crates/core/tests/: table_read_tests.rs
crates/core/tests/data/log_files/valid_log_avro_delete/: .74e73b70-d681-4b27-9389-5c41d77897fe-0_20250209014234708.log.2_0-145-201
crates/core/tests/data/log_files/valid_log_file/: .54e9a5e9-ee5d-4ed2-acee-720b5810d380-0_20250109233025121.log.1_0-51-115  expected_records.csv
crates/datafusion/: Cargo.toml
crates/datafusion/src/: lib.rs
crates/datafusion/tests/: plan_tests.rs
crates/test/: Cargo.toml
crates/test/data/sample_table/cow/: v9_timebasedkeygen_epochmillis.sql  v9_timebasedkeygen_nonhivestyle.sql  v9_timebasedkeygen_unixtimestamp.sql  v9_txns_simple_overwrite.sql
crates/test/data/sample_table/mor/avro/: v9_nonpartitioned_rollback.sql  v9_timebasedkeygen_nonhivestyle.sql  v9_txns_simple_overwrite.sql
crates/test/data/tables/mor/: v6_complexkeygen_hivestyle.sql
crates/test/src/: lib.rs
docs/: reader-spec.md
docs/plans/: 2026-05-03-hudi-plan-config.md
python/: AGENTS.md
python/hudi/: __init__.py  _internal.pyi
python/src/: internal.rs
python/tests/: test_config_enums.py  test_table_builder.py  test_table_incremental_read.py  test_table_misc.py
release/: README.md
